Fix div#content text overflow on mobile

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ div#content {
     background-color: hsl(209, 100%, 90%);
     width: var(--content-width, 80%);
     max-width: 850px;
-    height: 100%;
     margin: 20px auto;
     padding: 0 20px;
 }
@@ -56,7 +55,6 @@ figure:hover {
 
 img#image {
     width: 100%;
-    height: auto;
     max-width: 640px;
     display: block;
     margin: auto;
